fix pre overflow

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -19,3 +19,11 @@ a {
 	color: rgba(0,0,0,.65);
 }
 
+
+.pre-x-scrollable {
+    overflow: auto;
+    -ms-word-wrap: normal;
+    word-wrap: normal;
+    overflow-wrap: normal;
+    white-space: pre;
+}
